etape css manque toujour les icone en html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <a href="#">Télécharger</a>
                 <a href="#">Offres</a>
-                <button class="bouton white">Connexion</button>
+                <button class="white">Connexion</button>
                 <button class="bouton">inscription</button>
             </nav>
         </div>    
@@ -30,26 +30,27 @@
     <section class="téléphone">
         <div>
             <h1>Vos émotions mérite d'avoir leur musique.</h1>
-            <p>profitez de 3 mois offerts pour esseyez deezer prenium*</p>
-            <button class="bouton white">Connexion</button>
-            <button class="bouton">inscription</button>
+            <p>Profitez de 3 mois offerts pour esseyez<br/> deezer prenium*</p>
+            <button class="bouton-rose">Deezer Prenium</button>
+            <button class="bouton-blanc">Deezer Gratuit</button>
         </div>
         <img src="img/hero.png" alt="pochette d'album"/>
     </section>
 
-    <section class="flex gris">
+    <section class="flex2 gris">
         <img class="phone" src="img/phone.jpg" alt="image d'un smartphone"/>
-        <h3> Deezer, c'est quoi ?</h3>
-        <div>
-            <p> Toute votre musique dans votre poche.</p>
+        
+        <div class="tel">
+            <h3> Deezer, c'est quoi ?</h3>
+            <p><strong>Toute votre musique dans votre poche.</strong> </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus elit eget tortor tincidunt, nec auctor enim dignissim. Etiam quis fringilla metus. Praesent id sollicitudin purus.</p>
-            <p>Créer votre bibliothèque musicale.</p>
+            <p> <strong>Créer votre bibliothèque musicale.</strong></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus elit eget tortor tincidunt, nec auctor enim dignissim. Etiam quis fringilla metus. Praesent id sollicitudin purus.</p>
         </div>
         <div>
-            <p> Pas de wifi ? Pas de problème.</p>
+            <p><strong>Pas de wifi ? Pas de problème.</strong></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus elit eget tortor tincidunt, nec auctor enim dignissim. Etiam quis fringilla metus. Praesent id sollicitudin purus.</p>
-            <p>Un Deezer qui vous ressemble.</p>
+            <p><strong>Un Deezer qui vous ressemble.</strong></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus elit eget tortor tincidunt, nec auctor enim dignissim. Etiam quis fringilla metus. Praesent id sollicitudin purus.</p>
         </div>
     </section>
