parti icone fini juste faut les mettre en blanc

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
         </div>
     </section>
 
-    <section>
+    <section class="flex2 pink">
         <div>
-
+            <img class="icone" src="icon/laptop.png" alt="icone d'ordinateur"/>
+            <img class="icone" src="icon/smartphone.png" alt="icone téléphone" />
+            <img class="icone" src="icon/smartwatch.png" alt="icone de montre connecter"/>
+            <img class="icone"src="icon/voiture-ecologique.png" alt="icone de voiture"/>
         </div>
         <div>
             <h3>Toujour avec vous</h3>
