manque le pofinage des section apres projet fini

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </ul>
             </div>
         </div>   
-         <img src="img/logo.png" alt="logo Deezer"/>
+         <img src="img/unnamed.png" alt="logo Deezer"/>
     </footer>
     
   </body>
