--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="flex">
         
             <img src="img/logo.png" alt="logo Deezer"/>
-        <div>  
+        <div class="effacer">  
             <nav>
                 <a href="#">Télécharger</a>
                 <a href="#">Offres</a>
