terminer a voir sur mobile

--- a/index.html
+++ b/index.html
@@ -57,17 +57,21 @@
                 </div>
             </section>
 
-            <section class="flex2 pink">
+            <section class="pink">
+             <div class="flex6">
                 <div>
                     <img class="icone" src="icon/laptop.png" alt="icone d'ordinateur"/>
                     <img class="icone" src="icon/smartphone.png" alt="icone téléphone" />
                     <img class="icone" src="icon/smartwatch.png" alt="icone de montre connecter"/>
                     <img class="icone"src="icon/voiture-ecologique.png" alt="icone de voiture"/>
+                
                 </div>
-                <div class="largeur">
+               
+                <div>
                     <h3>Toujour avec vous</h3>
                     <p>Ut maximus consectetur pharetra. Duis molestie mauris a sagittis consectetur. Aliquam erat volutpat. Donec sit amet neque tristique, maximus libero vitae, tempus libero. Nulla facilisi. Phasellus non ornare lectus. Morbi at lectus nec lacus porttitor pellentesque in in est. Nulla sollicitudin sit amet enim vitae sodales. Praesent vitae nisl velit.</p>
                 </div>
+            </div>  
             </section>
 
             <section>
