--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
         <div id="bloc-page">
+            <!--section haut de page avec barre de nav et logo-->
             <header class="flex">
                 
                 <img src="img/logo.png" alt="logo Deezer"/>
